# Hackathon_KMIPN_SAPA_AI_BACKEND

./: .env.example  .gitignore  AGENTS.md  APIDOCS.md  Cargo.toml  Makefile  README.md  rust-toolchain.toml  shell.nix
src/: config.rs  error.rs  lib.rs  main.rs  middleware.rs  response.rs  server.rs  state.rs
src/database/: connection.rs  mod.rs  scheme.rs
src/handlers/: activity.rs  auth.rs  campaign.rs  company.rs  contact.rs  deal.rs  deal_stage.rs  health.rs  mod.rs  note.rs  notification.rs  product.rs  quote.rs  tag.rs  ticket.rs  user.rs  whatsapp.rs
src/models/: activity.rs  auth.rs  campaign.rs  company.rs  contact.rs  deal.rs  deal_stage.rs  mod.rs  note.rs  notification.rs  product.rs  quote.rs  tag.rs  ticket.rs  user.rs  whatsapp.rs
src/routes/: api.rs  health.rs  mod.rs
src/utils/: db.rs  debugger.rs  mod.rs  musl_compat.rs
src/whatsapp/: formatmessage.rs  mod.rs
src/ws/: broadcaster.rs  event.rs  handler.rs  mod.rs
